--- a/index.html
+++ b/index.html
@@ -41,8 +41,7 @@
             <h3 class="my-4"><b>Simples Vitamina de 6 Ingredientes Derrete Muita Gordura</b></h3>
 
             <!-- VSL -->
-            <script type="text/javascript" id="scr_6226ac18aa8f7e000965d88e">var s=document.createElement("script");s.src="https://cdn.converteai.net/8b03b5e9-1e95-4b45-9063-037ac9b350ab/players/6226ac18aa8f7e000965d88e/player.js",s.async=!0,document.head.appendChild(s);</script>
-
+           <iframe src="https://player.vimeo.com/video/699928773?h=e6507a3e6c" width="640" height="480" frameborder="0" allow="autoplay; fullscreen; picture-in-picture" allowfullscreen></iframe>
             <!-- Botão -->
             <div id="cta1" class="mt-4 d-none">
               <a href="COLAR LINK KIWIFY AQ" class="a-btn" style="text-decoration: none;">
@@ -59,7 +58,7 @@
     </header>
 
     <script type="text/javascript">
-      setTimeout(() => {document.getElementById("cta1").classList.remove("d-none")}, 1637000); // temporização da Call to Action (em milissegundos)
+      setTimeout(() => {document.getElementById("cta1").classList.remove("d-none")}, 1293000); // temporização da Call to Action (em milissegundos)
     </script>
 
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
