--- a/index.html
+++ b/index.html
@@ -47,6 +47,7 @@
 /></noscript>
 <!-- End Meta Pixel Code -->
   
+    <meta name="facebook-domain-verification" content="ubx21b78zkxshxazk2nvt5vr003o8b" />
     
   </head>
   <body>
